@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:                Proc-Simple
-version:             1.22
+version:             1.23
 abstract:            ~
 license:             ~
 generated_by:        ExtUtils::MakeMaker version 6.31
